ok, so here's a first draft of Process ... it's nap time! I'm starting to get a good gestalt here, but it is a ways away ... ha!

--- a/views/process.ejs
+++ b/views/process.ejs
@@ -16,8 +16,9 @@
             <h3 style="border-bottom: 1px solid #333;">Working With Us</h3>
 
             <div class="medium">
-                Our process builds and supports the best opportunities currently available.
-
+                <!--Our process builds on and supports the best opportunities currently available.-->
+                Post Tool believes that research, documentation, design and development are a unified process in which all
+                team members participate.
                 Post Tool classifies all software development projects into phases. A typical project progresses through
                 each of the following phases sequentially. Often we loop through the phases continuously as needs and
                 requirements grow in complexity. Our goal is to keep the software usable and logically consistent as it
@@ -35,6 +36,8 @@
         <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <h3 style="border-bottom: 1px solid #333;">Critical Phases</h3>
+          <!--NOTE: what follows is not yet reduced to "Critical Phases". I think some stuff, like Content Management and
+          Platform Selection should be on the "company" page, perhaps. Seems this page should be a concise outline of process.-->
         </div>
         <div class="col span_2_of_5">
             <img id="gantt" src="image/gantt.svg" width="100%">
@@ -47,55 +50,38 @@
                We learn your language, then refine, standardize, and document it. We then use this language to establish all the
                 requirements and desires of key stakeholders.</p>
 
-            <p>Sometimes software is developed to support an existing process and sometimes is offers something
-                completely new. When software will support existing processes, an initial research project is required.
-                We observe, interview and document participants as they operate &lsquo;in the field&rsquo;. Then we
-                interject software where we can improve the experience. If the product represents something completely
-                new, we attempt to relate it to existing processes and understand what we intend to improve. </p>
+            <p>Sometimes software is developed to support an existing process and sometimes it offers something
+                completely new. Both cases begin with an initial research process.
+              <!--When software will support existing processes, an initial research project is required.-->
+                We observe, interview and document participants as they operate &lsquo;in the field&rsquo;.
+              If the product represents something completely
+              new, we attempt to understand it in relation to existing processes, how it will fit in with and may affect
+              existing practices.
+              With these findings we develop software to <!--interject software where we can--> improve the experience.
+              <!--and understand what we intend to improve.-->
+            <!--how the new and old will coexist-->
+            </p>
         </div>
         <div class="col span_2_of_5"></div>
         <div class="col span_1_of_5">
             <h3>Planning</h3>
         </div><div class="col span_2_of_5">
-            <p>We quantify behavior in terms of activities by role and document workflows for significant
-                activities. This mapping allows us to estimate resource requirements in detail.</p>
-        </div>
-        <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Documentation</h3>
-        </div><div class="col span_2_of_5">
-            <p>The documentation represents an overview of the application as well as wireframes and process flows for
-                identified personas.
-                From the discovery and planning documents, we can implement initial wireframes. These wireframes can be
-                tested with users to validate research findings. They can also be used to indicate high level components
-                or visual rhetoric that will be used throughout. Once satisfied with the initial wireframe directions,
-                we produce complete documentation.
-                Post Tool believes that research, documentation, design and development are a unified process, so all
-                team members participate in developing the documentation. This approach keeps the entire team engaged in
-                what we consider the most difficult part of the process.
-            </p>
-        </div>
-        <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Prototyping</h3>
-        </div><div class="col span_2_of_5">
-            <p>Sometimes we have the luxury of prototyping an application before we build out the entire specification.
-                This requires the team and stakeholders to identify the highest ranked features for development in the
-                most efficient manner possible. This work allows us to test assumptions directly with users in front of
-                a device.</p>
-        </div>
-        <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Testing</h3>
-        </div><div class="col span_2_of_5">
-            <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
-                application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
-                revision of existing features or the development of new ones.</p>
+          <p>We begin by analyzing the work into component parts in order to quantify and estimate roles and document workflows.
+            We create a spreadsheet listing each signigicant part with an estimated time frame.
+          <!--</p>-->
+            <!--<p>We quantify behavior in terms of activities by role and document workflows for significant activities.-->
+                 This mapping allows us to estimate resource requirements in detail. It also allows the client to understand
+              how the work is progressing.
+          </p>
         </div>
         <div class="col span_2_of_5"></div>
         <div class="col span_1_of_5">
             <h3>Visual Design</h3>
+        <!--NOTE: should this be earlier than you had it. We don't develop Visuals AFTER Testing!
+         Actually, should design be treated somewhat independently, on it's own timeline, or interpolated into various phases?-->
         </div><div class="col span_2_of_5">
+            <p>As the project analysis begins, so does the design development. We can work with in-house designers and
+            existing branding requirements, or we can handle all of the design. This </p>
             <p>Post Tool has received dozens of awards for its user interface innovation throughout the &lsquo;90s.
                 Since then we have partnered with some of the best design firms in the world to produce inventive and
                 sophisticated user interfaces.</p>
@@ -113,18 +99,54 @@
         <div class="col span_1_of_5">
             <h3>Content Management</h3>
         </div><div class="col span_2_of_5">
-            <p>Your data ecosystem is complex. Often legacy systems must be closely migled with new functionality. We
+            <p>Your data ecosystem is complex. Often legacy systems must be closely intermingled with new functionality. We
                 develop content strategies and processes that help you identify, prioritize, produce and control the
-                flow of content to meet the needs of all persona. We customize and configure sophisticated content
+                flow of content to meet the needs of all personas. We customize and configure sophisticated content
                 management systems capable of managing &lsquo;big data&rsquo; scale content and media.</p>
         </div>
         <div class="col span_2_of_5"></div>
+      <div class="col span_1_of_5">
+            <h3>Documentation</h3>
+        </div><div class="col span_2_of_5">
+            <p>The documentation is a comprehensive overview of the application. This includes wireframes and process flows for
+                identified roles.</p>
+            <p>Using the discovery and planning documents, we implement initial wireframes. These wireframes can be
+                tested with users to validate research findings. They can also be used to indicate high level components
+                or visual rhetoric that will be used throughout. Once satisfied with the initial wireframe directions,
+                we produce complete documentation.
+
+                <!--Tool Tool believes that research, documentation, design and development are a unified process, so all
+                team members participate in developing the documentation. This approach keeps the entire team engaged in
+                what we consider the most difficult part of the process.-->
+            </p>
+        </div>
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Prototyping</h3>
+        </div><div class="col span_2_of_5">
+            <p>Sometimes we have the luxury of prototyping an application before we build out the entire specification.
+                This requires the team and stakeholders to identify the highest ranked features for development in the
+                most efficient manner possible. This work allows us to test assumptions directly with users in front of
+                a device.</p>
+        </div>
+        <div class="col span_2_of_5"></div>
+
+      <!--NOTE: this is QA, no? Should be late than you had it, and/or mixed in under "evaluation"-->
+<!--        <div class="col span_1_of_5">
+            <h3>Testing</h3>
+        </div><div class="col span_2_of_5">
+            <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
+                application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
+                revision of existing features or the development of new ones.</p>
+        </div>
+        <div class="col span_2_of_5"></div>
+-->
         <div class="col span_1_of_5">
             <h3>Application Development</h3>
         </div><div class="col span_2_of_5">
-            <p>As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
-                complement to existing products or software as service &ndash; becomes essential. Our UX, design and
-                development teams build highly functional and custom applications to fit your needs. We believe they
+            <p>Our UX, design and development teams build highly functional and custom applications to fit your needs.
+              As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
+                complement to existing products or software as service &ndash; becomes essential. We believe they
                 should also be engaging. Users want intuitive interfaces that allow them to drag, drop, watch and play.
                 We&rsquo;ve pioneered the design and technology behind many of these paradigms.</p>
         </div>
@@ -134,6 +156,10 @@
         </div><div class="col span_2_of_5">
             <p>Here we are. The application is in beta. Does it meet our expectations? Where do we go from here? These
                 questions with key stakeholders and a round of formal user testing will inform our next steps.</p>
+            <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
+                application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
+                revision of existing features or the development of new ones.</p>
+
         </div>
         <div class="col span_2_of_5"></div>
         <div class="col span_1_of_5">
