--- a/views/index.ejs
+++ b/views/index.ejs
@@ -230,7 +230,7 @@
             <li>SVA How We learn What We learn</li>
             <li>Minneapolis AIGA Design Camp</li>
             <li>AIGA National Convention &lsquo;Post Tv&rsquo; </li>
-            <li>vISCOM &lsquo;Interactive Design&rsquo;</li>
+            <li>VISCOM &lsquo;Interactive Design&rsquo;</li>
         </ul>
     </div>
     <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
