--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,13 @@ body {
     margin: 0;
 }
 
+h1, h2, h3 {
+    margin: 0;
+    padding:0;
+}
+p {
+    margin-top: 0;
+}
 #root {
     background-color: #EEEFEA;
     margin: 80px 20px 0 0;
@@ -69,7 +76,8 @@ h3, .head {
 }
 
 .capabilities h3 {
-    height: 30px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
     border-bottom: 3px solid #eee;
 }
 
