--- a/views/process.ejs
+++ b/views/process.ejs
@@ -31,15 +31,24 @@
     </div>
 
 
-    <div class="section group padboth capabilities">
+
+    <div class="section group padboth">
+
+        <div class="col span_2_of_5" style="height: 0;">
+            <!--<img id="gantt" src="image/gantt.svg" class="svg" width="100%">-->
+        </div>
+        <div class="col span_3_of_5"></div>
+
+
+
         <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <h3 style="border-bottom: 1px solid #333;">Critical Phases</h3>
         </div>
-        <div class="col span_2_of_5">
-            <img id="gantt" src="image/gantt.svg" width="100%">
-        </div>
 
+
+
+        <div class="col span_2_of_5"></div>
         <div class="col span_1_of_5">
             <h3>Discovery </h3>
         </div><div class="col span_2_of_5">
