--- a/views/process.ejs
+++ b/views/process.ejs
@@ -16,7 +16,6 @@
             <h3 style="border-bottom: 1px solid #333;">Working With Us</h3>
 
             <div class="medium">
-                <!--Our process builds on and supports the best opportunities currently available.-->
                 Post Tool believes that research, documentation, design and development are a unified process in which all
                 team members participate.
                 Post Tool classifies all software development projects into phases. A typical project progresses through
@@ -46,7 +45,7 @@
         <div class="col span_3_of_5">
             <h3 style="border-bottom: 1px solid #333;">Critical Phases</h3>
           <!--NOTE: what follows is not yet reduced to "Critical Phases". I think some stuff, like Content Management and
-          Platform Selection should be on the "company" page, perhaps. Seems this page should be a concise outline of process.-->
+          Platform Selection should be on the "company" page, perhaps. Seems this page should be a concise outline of process. YES-->
         </div>
 
 
@@ -61,14 +60,11 @@
 
             <p>Sometimes software is developed to support an existing process and sometimes it offers something
                 completely new. Both cases begin with an initial research process.
-              <!--When software will support existing processes, an initial research project is required.-->
                 We observe, interview and document participants as they operate &lsquo;in the field&rsquo;.
               If the product represents something completely
               new, we attempt to understand it in relation to existing processes, how it will fit in with and may affect
               existing practices.
-              With these findings we develop software to <!--interject software where we can--> improve the experience.
-              <!--and understand what we intend to improve.-->
-            <!--how the new and old will coexist-->
+              With these findings we develop software to improve the experience.
             </p>
         </div>
         <div class="col span_2_of_5"></div>
@@ -77,8 +73,6 @@
         </div><div class="col span_2_of_5">
           <p>We begin by analyzing the work into component parts in order to quantify and estimate roles and document workflows.
             We create a spreadsheet listing each signigicant part with an estimated time frame.
-          <!--</p>-->
-            <!--<p>We quantify behavior in terms of activities by role and document workflows for significant activities.-->
                  This mapping allows us to estimate resource requirements in detail. It also allows the client to understand
               how the work is progressing.
           </p>
@@ -87,7 +81,7 @@
         <div class="col span_1_of_5">
             <h3>Visual Design</h3>
         <!--NOTE: should this be earlier than you had it. We don't develop Visuals AFTER Testing!
-         Actually, should design be treated somewhat independently, on it's own timeline, or interpolated into various phases?-->
+         Actually, should design be treated somewhat independently, on it's own timeline, or interpolated into various phases? YES YESYYYESSSS! integrated throughout, ideally!-->
         </div><div class="col span_2_of_5">
             <p>As the project analysis begins, so does the design development. We can work with in-house designers and
             existing branding requirements, or we can handle all of the design. This </p>
@@ -124,9 +118,6 @@
                 or visual rhetoric that will be used throughout. Once satisfied with the initial wireframe directions,
                 we produce complete documentation.
 
-                <!--Tool Tool believes that research, documentation, design and development are a unified process, so all
-                team members participate in developing the documentation. This approach keeps the entire team engaged in
-                what we consider the most difficult part of the process.-->
             </p>
         </div>
         <div class="col span_2_of_5"></div>
@@ -140,7 +131,7 @@
         </div>
         <div class="col span_2_of_5"></div>
 
-      <!--NOTE: this is QA, no? Should be late than you had it, and/or mixed in under "evaluation"-->
+      <!--NOTE: this is QA, no? Should be late than you had it, and/or mixed in under "evaluation" Well this might be "testing w/ wireframes or prototypes" kinda optional-->
 <!--        <div class="col span_1_of_5">
             <h3>Testing</h3>
         </div><div class="col span_2_of_5">
