--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,7 @@
 <div class="section group">
     <div class="intro-bar"></div>
     <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
-        Thoughtful solutions framed by design &amp; founded on technological sophistication.
-      <!--supported by expertly produced technology.-->
-        <!--Design-driven application development. Expertly produced technology.-->
+        Thoughtful solutions framed <br>by design &amp; founded on technological sophistication.
     </div>
 </div>
 <div class="section group padboth">
