--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -56,13 +56,39 @@
     overflow: hidden;
 }
 
-@media only screen and (max-width: 800px) {
+
+
+@media only screen and (max-width: 1150px) {
     .col {
         margin: 18px 0 18px 0;
     }
+
+    .span_5_of_5 {
+        width: 100%;
+    }
+
+    .span_4_of_5 {
+        width: 100%;
+    }
+
+    .span_3_of_5 {
+        width: 50%;
+    }
+
+    .span_2_of_5 {
+        width: 50%;
+    }
+
+    .span_1_of_5 {
+        width: 25%;
+    }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 850px) {
+    .col {
+        margin: 18px 0 18px 0;
+    }
+
     .span_5_of_5 {
         width: 100%;
     }
