mobile nav & layout width = 850 + other misc formatting

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -19,7 +19,7 @@
                 <input type="text" name="company"><br>
                 <label>Message</label><br>
                 <textarea name="message" rows="4"></textarea><br>
-                <a href="#">SEND REQUEST.</a>
+                <a href="#">SEND MESSAGE.</a>
             </form>
         </div>
 
@@ -31,7 +31,7 @@
 </div>
 <% include foot %>
  <img src="/image/se.svg" style="float: left">
-<div style="float: left; margin: 42px 0px 20px 2px; padding: 0px 18px; background-color: #EEEFEA;">
+<div style="float: left; margin: 42px 0px 20px 2px; padding: 0px 18px;">
   <h3>There is much more.</h3>
 
     <!--<p>Our clients are Fortune 500 companies, startups, nonprofits, universities, publishers, technologists,
