--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,8 +1,6 @@
 <div class="section group padboth">
-    <div class="col span_2_of_5" style="border-top: 1px solid #333;">
-        Post Tool
+    <div class="col span_5_of_5" style="border-top: 1px solid #333; color: #111;">
+        &copy; <%= new Date().getFullYear() %> Post Tool
     </div>
-    <div class="col span_3_of_5" style="border-top: 1px solid #333; padding-right: 0; text-align: right;">
-        &copy; <%= new Date().getFullYear() %>
-    </div>
+
 </div>
