--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -35,7 +35,7 @@ nav li a.selected:hover {
     visibility: hidden;
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 850px) {
     #bz {
         position: fixed;
         z-index: 9;
@@ -69,8 +69,9 @@ nav li a.selected:hover {
         left: 245px;
         height: 60px;
         padding-top: 25px;
-        width: 70%;
+        width: 75%;
         max-width: 880px;
+        min-width: 760px;
     }
 
     nav ul {
@@ -94,7 +95,7 @@ nav li a.selected:hover {
 }
 
 /* mobile */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 850px) {
     body {
         overflow-x: hidden;
     }
