--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 <div class="section group padboth">
-    <div class="col span_5_of_5" style="border-top: 1px solid #333; color: #111;">
+    <div class="col span_5_of_5" style="border-top: 1px solid #333; color: #111; padding-bottom: 40px;">
         &copy; <%= new Date().getFullYear() %> Post Tool
     </div>
 
