--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         We produced white label developer kits for mobile applications.
         We built business intelligence tools for non-profits.
         We have hosted thousands of web sites.
-                Simply put, we help countless clients translate their visions into elegantly designed software.
+        Simply put, we help countless clients translate their visions into elegantly designed software.
 
         <br>
         <a href="/contact" class="request-case-study">REQUEST A CASE STUDY.</a>
@@ -25,10 +25,11 @@
 </div>
 
 <a name="capabilities"></a>
+
 <div class="section group padboth capabilities">
     <div class="col span_5_of_5" style="padding:0">
-        <div class="col span_2_of_5 bighead" style="padding:0">Capabilities</div>
-        <div class="col span_3_of_5" style="margin-top:10px;border-bottom: 1px solid #333;"></div>
+        <div class="col span_2_of_5 bighead">Capabilities</div>
+        <div class="col span_3_of_5 topline"></div>
     </div>
 
     <div class="col span_1_of_5 hspan_2">
@@ -43,10 +44,10 @@
         <h3>Software Development</h3>
 
         <p>We love producing applications crafted for clients' objective needs, discovering your unique situational
-          requirements and developing software to attain your desires.
-          <!--We like to produce applications that can operate with a plan that is appropriate-->
+            requirements and developing software to attain your desires.
+            <!--We like to produce applications that can operate with a plan that is appropriate-->
             <!--to our client.-->
-          We are experts at Java, Python, Javascript, Objective-C and Swift. We have
+            We are experts at Java, Python, Javascript, Objective-C and Swift. We have
             used all major SQL databases with various persistence layers as well as Mongo and Redis.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
@@ -86,23 +87,24 @@
         <h3>Interaction Design</h3>
 
         <p>Need users to browse through large amounts of information or perform complex tasks? How about something
-        fun that lets users "play" or interact in unconventional ways? We have produced complex dashboard control panels
-        as well as playful, entertaining, game-like experiences.</p>
+            fun that lets users "play" or interact in unconventional ways? We have produced complex dashboard control
+            panels
+            as well as playful, entertaining, game-like experiences.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>User Experience</h3>
 
         <p>Do you have an existing application but want to improve the user experience? We do that!
-        We gather user feedback and other data about use and experience then work with
+            We gather user feedback and other data about use and experience then work with
             you and your engineers to create a super-usable interface.
-          <!--We are always happy to design/build.-->
+            <!--We are always happy to design/build.-->
         </p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Mobile Applications</h3>
 
         <p>Mobile compatibility is no problem&mdash;we build responsive web sites. Yet,
-          your application might need a native iOS 7 client.
+            your application might need a native iOS 7 client.
             Whether you have an existing backend or need services to support it, we can help you
             design, develop, test, launch, maintain and evolve the app.
         </p>
@@ -131,13 +133,11 @@
             your field and thus as partners in collaboration.
 
 
-
-
         </div>
         <div class="prompt"> Interested in learning more about our successful relationships with our clients?<br>
             <a href="/contact">REQUEST A CASE STUDY.</a></div>
     </div>
-    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+    <div class="col span_1_of_5 topline">
         <ul>
             <li>Nuance Communications</li>
             <li>Apple Computers</li>
@@ -153,7 +153,7 @@
             <li>Mills College</li>
         </ul>
     </div>
-    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+    <div class="col span_1_of_5 topline">
         <ul>
             <li>Yale University Press</li>
             <li>Oracle</li>
@@ -183,7 +183,7 @@
             in our field.
         </div>
     </div>
-    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+    <div class="col span_1_of_5 topline">
         <h3>Publications</h3>
         <ul>
             <li>Blobjects,<br>San Jose Museum of Art</li>
@@ -194,9 +194,9 @@
             <li>Sonic Graphics, <br>Seeing Sound</li>
             <li>Radical Graphics, <br>Chronicle Books</li>
             <li>Type in Motion, Rizzoli</li>
-<!--            <li>Typographics Three, <br>Hearst Books Intl.</li>
-            <li>Cool Sites, <br>Hearst Books Intl.</li>
-            <li>Eye Magazine <br>&lsquo;Serious Doodling&rsquo;</li>
+            <!--            <li>Typographics Three, <br>Hearst Books Intl.</li>
+                        <li>Cool Sites, <br>Hearst Books Intl.</li>
+                        <li>Eye Magazine <br>&lsquo;Serious Doodling&rsquo;</li>
             <li>IMG SRC 100</li>
             <li>Graphic Design in America, Rockport Publishers</li>
             <li>Communication Arts <br>&lsquo;Post Tool design&rsquo; </li>
@@ -209,14 +209,14 @@
             <li>ID Magazine &lsquo;Electronic Youth&rsquo;</li>
             <li>Graphis Magazine <br>&lsquo;Multimedia by the Bay&rsquo;</li>
             <li>The AIGA Journal <br>&lsquo;Absolute Individuals&rsquo;</li>
-            <li>U&amp;lc  Magazine <br>&lsquo;Post Tool design&rsquo;</li>
+            <li>U&amp;lc Magazine <br>&lsquo;Post Tool design&rsquo;</li>
             <li>On-line Design Magazine &lsquo;Digitizing the Child Within&rsquo;</li>
         </ul>
 
     </div>
 
 
-    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+    <div class="col span_1_of_5 topline">
         <h3>Notable Lectures</h3>
         <ul>
             <li>San Jose State University</li>
@@ -239,12 +239,12 @@
             <li>VISCOM &lsquo;Interactive Design&rsquo;</li>
         </ul>
     </div>
-    <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
+    <div class="col span_1_of_5 topline"></div>
+    <div class="section group">
+        <div class="col span_5_of_5" style="text-align:right; padding:20px 1px 10px 0;">
+            <a href="/process">Now: Learn about our Process.</a>
+        </div>
     </div>
-<div class="section group padboth">
-    <div class="col span_5_of_5" style="text-align:right">
-        <a href="/process">Now: Learn about our Process</a>
-    </div></div>
 </div>
 <% include footer %>
 </div>
