--- a/views/process.ejs
+++ b/views/process.ejs
@@ -51,10 +51,9 @@
 
 
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Discovery </h3>
-        </div><div class="col span_2_of_5">
-            <p>One goal of discovery is to establish a succinct vocabulary that all participants can use to communicate.
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Discovery </h3></div>
+            <div class="col span_2_of_3"><p>One goal of discovery is to establish a succinct vocabulary that all participants can use to communicate.
                We learn your language, then refine, standardize, and document it. We then use this language to establish all the
                 requirements and desires of key stakeholders.</p>
 
@@ -64,116 +63,113 @@
               If the product represents something completely
               new, we attempt to understand it in relation to existing processes, how it will fit in with and may affect
               existing practices.
-              With these findings we develop software to improve the experience.
-            </p>
+              With these findings we develop software to improve the experience.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Planning</h3>
-        </div><div class="col span_2_of_5">
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Planning</h3></div>
+             <div class="col span_2_of_3">
           <p>We begin by analyzing the work into component parts in order to quantify and estimate roles and document workflows.
             We create a spreadsheet listing each signigicant part with an estimated time frame.
                  This mapping allows us to estimate resource requirements in detail. It also allows the client to understand
-              how the work is progressing.
-          </p>
+              how the work is progressing.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Visual Design</h3>
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Visual Design</h3></div>
+             <div class="col span_2_of_3">
         <!--NOTE: should this be earlier than you had it. We don't develop Visuals AFTER Testing!
          Actually, should design be treated somewhat independently, on it's own timeline, or interpolated into various phases? YES YESYYYESSSS! integrated throughout, ideally!-->
-        </div><div class="col span_2_of_5">
             <p>As the project analysis begins, so does the design development. We can work with in-house designers and
             existing branding requirements, or we can handle all of the design. This </p>
             <p>Post Tool has received dozens of awards for its user interface innovation throughout the &lsquo;90s.
                 Since then we have partnered with some of the best design firms in the world to produce inventive and
-                sophisticated user interfaces.</p>
+                sophisticated user interfaces.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Platform Selection</h3>
-        </div><div class="col span_2_of_5">
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Platform Selection</h3></div>
+             <div class="col span_2_of_3">
             <p>There is a wide assortment of platforms, libraries, frameworks, licenses, programming languages, etc.
                 Java, Ruby, Django, Apache ... &ldquo;The Cloud&rdquo; If you are familiar with the jargon, we will
                 openly discuss details in a technical way. If you are not, we will walk through the pros and cons of all
-                approaches especially in terms of cost of maintenance.</p>
+                approaches especially in terms of cost of maintenance.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Content Management</h3>
-        </div><div class="col span_2_of_5">
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Content Management</h3></div>
+             <div class="col span_2_of_3">
             <p>Your data ecosystem is complex. Often legacy systems must be closely intermingled with new functionality. We
                 develop content strategies and processes that help you identify, prioritize, produce and control the
                 flow of content to meet the needs of all personas. We customize and configure sophisticated content
-                management systems capable of managing &lsquo;big data&rsquo; scale content and media.</p>
+                management systems capable of managing &lsquo;big data&rsquo; scale content and media.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
-      <div class="col span_1_of_5">
-            <h3>Documentation</h3>
-        </div><div class="col span_2_of_5">
+      <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Documentation</h3></div>
+             <div class="col span_2_of_3">
             <p>The documentation is a comprehensive overview of the application. This includes wireframes and process flows for
                 identified roles.</p>
             <p>Using the discovery and planning documents, we implement initial wireframes. These wireframes can be
                 tested with users to validate research findings. They can also be used to indicate high level components
                 or visual rhetoric that will be used throughout. Once satisfied with the initial wireframe directions,
-                we produce complete documentation.
+                we produce complete documentation.</p></div>
 
-            </p>
         </div>
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Prototyping</h3>
-        </div><div class="col span_2_of_5">
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Prototyping</h3></div>
+             <div class="col span_2_of_3">
             <p>Sometimes we have the luxury of prototyping an application before we build out the entire specification.
                 This requires the team and stakeholders to identify the highest ranked features for development in the
                 most efficient manner possible. This work allows us to test assumptions directly with users in front of
-                a device.</p>
+                a device.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
 
       <!--NOTE: this is QA, no? Should be late than you had it, and/or mixed in under "evaluation" Well this might be "testing w/ wireframes or prototypes" kinda optional-->
 <!--        <div class="col span_1_of_5">
-            <h3>Testing</h3>
-        </div><div class="col span_2_of_5">
+            <div class="col span_1_of_3"><h3>Testing</h3></div>
+             <div class="col span_2_of_3">
             <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
                 application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
-                revision of existing features or the development of new ones.</p>
+                revision of existing features or the development of new ones.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
 -->
-        <div class="col span_1_of_5">
-            <h3>Application Development</h3>
-        </div><div class="col span_2_of_5">
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Application Development</h3></div>
+             <div class="col span_2_of_3">
             <p>Our UX, design and development teams build highly functional and custom applications to fit your needs.
               As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
                 complement to existing products or software as service &ndash; becomes essential. We believe they
                 should also be engaging. Users want intuitive interfaces that allow them to drag, drop, watch and play.
-                We&rsquo;ve pioneered the design and technology behind many of these paradigms.</p>
+                We&rsquo;ve pioneered the design and technology behind many of these paradigms.</p></div>
         </div>
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Evaluation </h3>
-        </div><div class="col span_2_of_5">
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Evaluation </h3></div>
+             <div class="col span_2_of_3">
             <p>Here we are. The application is in beta. Does it meet our expectations? Where do we go from here? These
                 questions with key stakeholders and a round of formal user testing will inform our next steps.</p>
             <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
                 application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
-                revision of existing features or the development of new ones.</p>
+                revision of existing features or the development of new ones.</p></div>
 
         </div>
         <div class="col span_2_of_5"></div>
-        <div class="col span_1_of_5">
-            <h3>Maintenance</h3>
-        </div><div class="col span_2_of_5">
+        <div class="col span_3_of_5">
+            <div class="col span_1_of_3"><h3>Maintenance</h3></div>
+             <div class="col span_2_of_3">
             <p>A primary project goal is to enable our clients to self-sustain the success of an application. After
                 completing a project, we collaborate with you to determine how many team members you need to maintain
                 digital assets, help train your people to use the necessary systems and work with you to develop a plan
-                for future maintenance.</p>
+                for future maintenance.</p></div>
         </div>
     </div>
   <div class="section group padboth">
-    <div class="col span_5_of_5" style="text-align:right;">
-        <a href="/contact">Now: Contact us to get started</a>
+        <div class="col span_5_of_5" style="text-align:right; padding:40px 1px 10px 0;">
+        <a href="/contact">Now: Contact us to get started.</a>
     </div>
   </div>
 
