--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -7,7 +7,7 @@
 .col {
     display: block;
     float: left;
-    padding: 18px 36px 18px 0;
+    padding: 18px 36px 0 0;
     box-sizing: border-box;
 }
 
@@ -51,17 +51,24 @@
     width: 20%;
 }
 
+.span_3_of_3 {
+    width: 100%;
+}
+
+.span_2_of_3 {
+    width: 65%;
+}
+
+.span_1_of_3 {
+    width: 35%;
+}
 .hspan_2 {
-    height: 400px;
     overflow: hidden;
 }
 
 
-
+/*
 @media only screen and (max-width: 1150px) {
-    .col {
-        margin: 18px 0 18px 0;
-    }
 
     .span_5_of_5 {
         width: 100%;
@@ -80,14 +87,14 @@
     }
 
     .span_1_of_5 {
-        width: 25%;
+        width: 50%;
     }
 }
+*/
 
 @media only screen and (max-width: 850px) {
-    .col {
-        margin: 18px 0 18px 0;
-    }
+
+
 
     .span_5_of_5 {
         width: 100%;
