--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,23 @@
 <div class="section group">
     <div class="intro-bar"></div>
     <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
-        Thoughtful solutions framed <br>by design &amp; founded on technological sophistication.
+        Thoughtful solutions framed <br>by design &amp; founded on technological artistry.
+      <!--technological sophistication, or: mastery wizardry dexterity virtuosity expertise prowess?
+      or, simply: founded on technology. ? -->
     </div>
 </div>
 <div class="section group padboth">
     <div class="col span_2_of_5"></div>
     <div class="col span_3_of_5 bigbody bigpadright">
+      <!--NOTE: I'm trying to push this into a more active voice. -->
+        We help Fortune 500 companies explode their productivity.
+        We engineer foundations for lucrative start-ups.
+        We produce white label developer kits for mobile applications.
+        We build business intelligence tools for non-profits.
+        We have hosted thousands of web sites. We've been crafting digital solutions for more than 25 years.
+        Simply, we can help countless clients translate their visions into elegantly designed software.
+
+<!--
         In over 25 years of business,
         we helped Fortune 500 companies explode their productivity.
         We engineered foundations for lucrative start-ups.
@@ -18,6 +29,7 @@
         We have hosted thousands of web sites.
         Simply put, we help countless clients translate their visions into elegantly designed software.
 
+-->
         <br>
         <a href="/contact" class="request-case-study">REQUEST A CASE STUDY.</a>
 
@@ -86,17 +98,21 @@
     <div class="col span_1_of_5 hspan_2">
         <h3>Interaction Design</h3>
 
-        <p>Need users to browse through large amounts of information or perform complex tasks? How about something
-            fun that lets users "play" or interact in unconventional ways? We have produced complex dashboard control
-            panels
-            as well as playful, entertaining, game-like experiences.</p>
+        <p> As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
+                complement to existing products or software as service &ndash; becomes essential. We believe they
+                should also be engaging. Users want intuitive interfaces that allow them to drag, drop, watch and play.
+                We&rsquo;ve pioneered the design and technology behind many of these paradigms.
+          </p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>User Experience</h3>
 
         <p>Do you have an existing application but want to improve the user experience? We do that!
-            We gather user feedback and other data about use and experience then work with
-            you and your engineers to create a super-usable interface.
+            <!--We gather user feedback and other data about use and experience then work with
+            you and your engineers to create a super-usable interface.-->
+          Need users to browse through large amounts of information or perform complex tasks? How about something
+            fun that lets users "play" or interact in unconventional ways? We have produced complex dashboard control
+            panels as well as playful, entertaining, game-like experiences.
             <!--We are always happy to design/build.-->
         </p>
     </div>
@@ -184,7 +200,11 @@
         </div>
     </div>
     <div class="col span_1_of_5 topline">
-        <h3>Publications</h3>
+        <h3>Critical Acclaim</h3>
+      <!--NOTE: "Publications" connotes that PostTool wrote these things
+        What other terms would better describe this collection?
+        Plaudits? Recognition? Testimonials? Citations? References? Praise for Post Tool?
+        In the News? Cool People Talking about Us? -->
         <ul>
             <li>Blobjects,<br>San Jose Museum of Art</li>
             <li>Graphic Design for the 21st Century, Phaidon</li>
