--- a/views/process.ejs
+++ b/views/process.ejs
@@ -53,40 +53,67 @@
         <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Discovery </h3></div>
-            <div class="col span_2_of_3"><p>One goal of discovery is to establish a succinct vocabulary that all participants can use to communicate.
-               We learn your language, then refine, standardize, and document it. We then use this language to establish all the
-                requirements and desires of key stakeholders.</p>
+          <div class="col span_2_of_3"><p>
+              We begin by understanding your desires thoroughly.
+              We understand how new software my affect existing processes.
+              We observe, interview and document participants as they operate &lsquo;in the field&rsquo;.
 
-            <p>Sometimes software is developed to support an existing process and sometimes it offers something
-                completely new. Both cases begin with an initial research process.
-                We observe, interview and document participants as they operate &lsquo;in the field&rsquo;.
+              <!--, how it will fit in with and may affect existing practices.-->
+              <!--One goal of discovery is to -->
+              We establish a succinct vocabulary that all participants can use to communicate.
+              We learn your language, then refine, standardize, and document it. We use this language to establish
+              all the requirements and desires of key stakeholders.
+            </p>
+            <p>Visual design begins. Design directions are explored in close communication with the client.
+            </p>
+
+            <!--<p>Sometimes software is developed to support an existing process and sometimes it offers something
+              completely new. Both cases begin with an initial research process.
+              We observe, interview and document participants as they operate &lsquo;in the field&rsquo;.
               If the product represents something completely
               new, we attempt to understand it in relation to existing processes, how it will fit in with and may affect
               existing practices.
-              With these findings we develop software to improve the experience.</p></div>
+              With these findings we develop software to improve the experience.</p>-->
+            </div>
         </div>
+
         <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Planning</h3></div>
              <div class="col span_2_of_3">
-          <p>We begin by analyzing the work into component parts in order to quantify and estimate roles and document workflows.
-            We create a spreadsheet listing each signigicant part with an estimated time frame.
+              <p>We analyze the project into component parts before any coding begins. We quantify and estimate roles and document workflows.
+                We create a spreadsheet listing each significant part with an estimated time frame.
                  This mapping allows us to estimate resource requirements in detail. It also allows the client to understand
-              how the work is progressing.</p></div>
+               the work as it progresses.</p>
+             <p>There is a wide assortment of platforms, libraries, frameworks, licenses, programming languages, etc.
+                Java, Ruby, Django, Apache ... &ldquo;The Cloud&rdquo; If you are familiar with the jargon, we will
+                openly discuss details in a technical way. If you are not, we will walk through the pros and cons of all
+                approaches especially in terms of cost of maintenance.</p>
+             <p>Your data ecosystem is complex. Often legacy systems must be closely intermingled with new functionality. We
+                develop content strategies and processes that help you identify, prioritize, produce and control the
+                flow of content to meet the needs of all personas. We customize and configure sophisticated content
+                management systems capable of managing &lsquo;big data&rsquo; scale content and media.</p>
+             <!--</div>-->
+             </div>
         </div>
+
+              <!--NOTE: should this be earlier than you had it. We don't develop Visuals AFTER Testing!
+         Actually, should design be treated somewhat independently, on it's own timeline, or interpolated into various phases? YES YESYYYESSSS! integrated throughout, ideally!-->
+<!--
         <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Visual Design</h3></div>
              <div class="col span_2_of_3">
-        <!--NOTE: should this be earlier than you had it. We don't develop Visuals AFTER Testing!
-         Actually, should design be treated somewhat independently, on it's own timeline, or interpolated into various phases? YES YESYYYESSSS! integrated throughout, ideally!-->
             <p>As the project analysis begins, so does the design development. We can work with in-house designers and
             existing branding requirements, or we can handle all of the design. This </p>
             <p>Post Tool has received dozens of awards for its user interface innovation throughout the &lsquo;90s.
                 Since then we have partnered with some of the best design firms in the world to produce inventive and
                 sophisticated user interfaces.</p></div>
         </div>
-        <div class="col span_2_of_5"></div>
+-->
+
+      <!--NOTE: these two sections are more general, and not stream-lined process specific-->
+<!--        <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Platform Selection</h3></div>
              <div class="col span_2_of_3">
@@ -95,6 +122,7 @@
                 openly discuss details in a technical way. If you are not, we will walk through the pros and cons of all
                 approaches especially in terms of cost of maintenance.</p></div>
         </div>
+
         <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Content Management</h3></div>
@@ -103,20 +131,26 @@
                 develop content strategies and processes that help you identify, prioritize, produce and control the
                 flow of content to meet the needs of all personas. We customize and configure sophisticated content
                 management systems capable of managing &lsquo;big data&rsquo; scale content and media.</p></div>
-        </div>
+        </div>-->
+
         <div class="col span_2_of_5"></div>
       <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Documentation</h3></div>
              <div class="col span_2_of_3">
-            <p>The documentation is a comprehensive overview of the application. This includes wireframes and process flows for
-                identified roles.</p>
+            <p>We produce a comprehensive overview of the application. This is our roadmap.
+              <!--in collaboration with the client.-->
+              This includes wireframes and process flows for identified roles.
+
+              We work iteratively, refining based on feedback from the client, developing toward final approval of
+              the project specifications.
+            </p>
             <p>Using the discovery and planning documents, we implement initial wireframes. These wireframes can be
                 tested with users to validate research findings. They can also be used to indicate high level components
                 or visual rhetoric that will be used throughout. Once satisfied with the initial wireframe directions,
                 we produce complete documentation.</p></div>
-
         </div>
-        <div class="col span_2_of_5"></div>
+
+ <!--       <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Prototyping</h3></div>
              <div class="col span_2_of_3">
@@ -125,26 +159,34 @@
                 most efficient manner possible. This work allows us to test assumptions directly with users in front of
                 a device.</p></div>
         </div>
+      -->
+       <!--NOTE: this is QA, no? Should be late than you had it, and/or mixed in under "evaluation" Well this might be "testing w/ wireframes or prototypes" kinda optional-->
+<!--
         <div class="col span_2_of_5"></div>
-
-      <!--NOTE: this is QA, no? Should be late than you had it, and/or mixed in under "evaluation" Well this might be "testing w/ wireframes or prototypes" kinda optional-->
-<!--        <div class="col span_1_of_5">
+            <div class="col span_1_of_5">
             <div class="col span_1_of_3"><h3>Testing</h3></div>
              <div class="col span_2_of_3">
             <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
                 application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
                 revision of existing features or the development of new ones.</p></div>
         </div>
-        <div class="col span_2_of_5"></div>
 -->
+      <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Application Development</h3></div>
              <div class="col span_2_of_3">
-            <p>Our UX, design and development teams build highly functional and custom applications to fit your needs.
-              As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
+            <p>We build your dream. Our UX, design and development teams build highly functional and custom applications to fit your needs.
+              We have established a visual design vocabulary. We have finalized documentation. Coding begins.
+            <!--  As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
                 complement to existing products or software as service &ndash; becomes essential. We believe they
                 should also be engaging. Users want intuitive interfaces that allow them to drag, drop, watch and play.
-                We&rsquo;ve pioneered the design and technology behind many of these paradigms.</p></div>
+                We&rsquo;ve pioneered the design and technology behind many of these paradigms.-->
+            </p>
+              <p>Sometimes we have the luxury of prototyping an application before we build out the entire specification.
+                This requires the team and stakeholders to identify the highest ranked features for development in the
+                most efficient manner possible. This work allows us to test assumptions directly with users in front of
+                a device.</p>
+             </div>
         </div>
         <div class="col span_2_of_5"></div>
         <div class="col span_3_of_5">
@@ -161,7 +203,8 @@
         <div class="col span_3_of_5">
             <div class="col span_1_of_3"><h3>Maintenance</h3></div>
              <div class="col span_2_of_3">
-            <p>A primary project goal is to enable our clients to self-sustain the success of an application. After
+            <p>Your application is alive and functioning in its ecosystem.
+              A primary project goal is to enable our clients to self-sustain the success of an application. After
                 completing a project, we collaborate with you to determine how many team members you need to maintain
                 digital assets, help train your people to use the necessary systems and work with you to develop a plan
                 for future maintenance.</p></div>
