--- a/views/process.ejs
+++ b/views/process.ejs
@@ -18,13 +18,18 @@
             <div class="medium">
                 Post Tool believes that research, documentation, design and development are a unified process in which all
                 team members participate.
-                Post Tool classifies all software development projects into phases. A typical project progresses through
-                each of the following phases sequentially. Often we loop through the phases continuously as needs and
-                requirements grow in complexity. Our goal is to keep the software usable and logically consistent as it
+              Our goal is to keep the software usable and logically consistent as it
                 adapts to use and matures.
+              Post Tool classifies all software development projects into phases. A typical project progresses through
+                each of the following phases.
+              <!--Often we loop through the phases continuously as needs and
+                requirements grow in complexity.-->
+
             </div>
-            <div class="prompt"> Interested in learning more about our successful relationships with our clients?<br>
-                <a href="/contact">REQUEST A CASE STUDY.</a></div>
+  <!--
+              <div class="prompt"> Interested in learning more about our successful relationships with our clients?<br>
+                  <a href="/contact">REQUEST A CASE STUDY.</a></div>
+  -->
 
         </div>
 
@@ -196,7 +201,10 @@
                 questions with key stakeholders and a round of formal user testing will inform our next steps.</p>
             <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
                 application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
-                revision of existing features or the development of new ones.</p></div>
+                revision of existing features or the development of new ones.</p>
+             <p>Often we loop through the phases continuously as needs and
+                requirements grow in complexity.</p>
+             </div>
 
         </div>
         <div class="col span_2_of_5"></div>
